[tool.poetry]
name = "pytorch_tutorial"
version = "0.1.0"
description = "Set of Script to learn pytorch"
authors = ["krishna-aicradle <krish.pathi91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
torch = "^1.7.1"
torchvision = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
